--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,15 @@
     <string name="title_activity_settings">activity_settings</string>
 
     <!-- Preference Titles -->
+    <string name="preference_testlist_title">Liste der BÄNGER</string>
+    <string name="preference_testlist_key">Ballermann</string>
+    <string name="preference_testlist_default">12Polizei,34Feuerwehr,56AlteHex</string>
+    <string name="preference_blutzucker_title">Blutzuckerwert</string>
+    <string name="preference_testcalc_key">Testrechnung 1</string>
+    <string name="preference_testcalc_default">5</string>
+    <string name="preference_langblutzucker_title">Langzeitblutzuckerwert</string>
+    <string name="preference_langtestcalc_key">Testrechnung 2</string>
+    <string name="preference_langtestcalc_default">5</string>
     <string name="messages_header">Messages</string>
     <string name="sync_header">Sync</string>
 
